[package]
name = "avrth"
version = "0.0.1"
authors = ["Andreas Rottmann <mail@r0tty.org>"]
license = "GPL-3.0-or-later"
keywords = ["forth", "avr"]
edition = "2018"

[dependencies]
structopt = "0.2"
failure = "0.1.2"
num-traits = "0.2.5"
byteorder = "1.2.6"
log = "0.4.5"
env_logger = "0.5.13"

[dev-dependencies]
quickcheck = "0.7.1"
